# Aho-Corasick_and_FMIndex

./: CMakeLists.txt  cpm.dependencies
src/aho_fm/: SearchHammingAAA.h  SearchHammingSM3.h  main.cpp
